--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,18 @@ dependencies {
     testImplementation 'junit:junit:4.12'
 }
 
+def getVersionName = { ->
+    def stdout = new ByteArrayOutputStream()
+    exec {
+        commandLine 'git', 'describe', '--tags'
+        standardOutput = stdout
+    }
+    return stdout.toString().trim()
+}
+
+group 'org.laser'
+version getVersionName()
+
 test {
     testLogging.events "passed", "skipped", "failed", "standardOut", "standardError"
 }
