--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,14 @@
 plugins {
     id 'java-library'
+    id 'maven-publish'
+    id "com.jfrog.bintray" version "1.8.4"
 }
 
 repositories {
     jcenter()
 }
 
-dependencies {
-    testImplementation 'junit:junit:4.12'
-}
-
-def getVersionName = { ->
+def getVersionName() {
     def stdout = new ByteArrayOutputStream()
     exec {
         commandLine 'git', 'describe', '--tags'
@@ -19,9 +17,37 @@ def getVersionName = { ->
     return stdout.toString().trim()
 }
 
+def VERSION = getVersionName()
+
 group 'org.laser'
-version getVersionName()
+version VERSION
+
+dependencies {
+    testImplementation 'junit:junit:4.12'
+}
 
 test {
     testLogging.events "passed", "skipped", "failed", "standardOut", "standardError"
+}
+
+bintray {
+    user = System.getenv('BINTRAY_USER')
+    key = System.getenv('BINTRAY_KEY')
+    publish = true
+    publications = ['PrettyPublication']
+    pkg {
+        name = 'pretty'
+        repo = 'laser'
+    }
+}
+
+publishing {
+    publications {
+        PrettyPublication(MavenPublication) {
+            from components.java
+            groupId 'org.laser'
+            artifactId 'pretty'
+            version VERSION
+        }
+    }
 }
